# ailbtorust

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Trunk.toml  babel.config.rs  dev.sh  eslint-test.rs  jest.config.rs  package.rs  tsconfig.eslint.rs  tsconfig.rs  vercel.rs
.github/: copilot-instructions.md
.github/agents/: deserialization.agent.md  desktop.agent.md  extensions.agent.md  frontend-dev.agent.md  layouts.agent.md  message-pipeline.agent.md  orchestrator.agent.md  panel-3d.agent.md  panel-image.agent.md  panel-log.agent.md  panel-map.agent.md  panel-plot.agent.md  panel-raw-messages.agent.md  panel-state-transitions.agent.md  panel-user-scripts.agent.md  panels-general.agent.md  player.agent.md  preload.agent.md  remote-connection.agent.md  theme.agent.md  unit-test.agent.md  web.agent.md  websocket-connection.agent.md
.github/instructions/: performance.instructions.md
.github/skills/3d-rendering/: SKILL.md
.github/skills/caching-internals/: SKILL.md
.github/skills/electron-internals/: SKILL.md
.github/skills/extensions-internals/: SKILL.md
.github/skills/layouts-internals/: SKILL.md
.github/skills/mcap-format/: SKILL.md
.github/skills/message-path/: SKILL.md
.github/skills/performance/: SKILL.md
.github/skills/player-internals/: SKILL.md
.github/skills/plot-internals/: SKILL.md
.github/skills/remote-caching/: SKILL.md
.github/skills/unit-testing/: SKILL.md
.github/skills/web-workers/: SKILL.md
.storybook/: main.rs  preview.rs  tsconfig.rs
.yarn/: yarn-wrapper.rs
benchmark/: package.rs  tsconfig.rs  webpack.config.rs
benchmark/src/: BenchmarkStats.rs  Root.rs  index.rs  layouts.rs  tsconfig.rs
benchmark/src/dataSources/: McapLocalBenchmarkDataSourceFactory.rs  SyntheticDataSourceFactory.rs  index.rs
benchmark/src/layouts/: DefaultMultipleThreeDee.rs  Empty.rs  PointcloudMultipleThreeDee.rs  PointcloudRawMessageAnd3d.rs  SinewaveSinglePlot.rs  TransformPreloading.rs
benchmark/src/players/: BenchmarkPlayer.rs  PointcloudPlayer.rs  SinewavePlayer.rs  TransformPlayer.rs  TransformPreloadingPlayer.rs  index.rs  time.rs
benchmark/src/services/: MemoryAppConfiguration.rs  index.rs
ci/: bump-nightly-version.rs  exec.rs  jest.config.rs  license-check.rs  lint-dependencies.rs  lint-unused-exports.rs
crates/lichtblick-app/: Cargo.toml
crates/lichtblick-app/src/: app.rs  cdr_decoder.rs  decoder.rs  lib.rs  mcap_reader.rs  player.rs
crates/lichtblick-app/src/components/: app_bar.rs  data_source_dialog.rs  mod.rs  panel_layout.rs  panel_toolbar.rs  playback_controls.rs  settings_dialog.rs  sidebar.rs  topic_list.rs  workspace.rs
crates/lichtblick-app/src/extensions/: loader.rs  manager.rs  mod.rs  storage.rs  types.rs
crates/lichtblick-app/src/hooks/: mod.rs  use_message_pipeline.rs
crates/lichtblick-app/src/panels/: data_source_info.rs  diagnostics_panel.rs  image_panel.rs  log_panel.rs  mod.rs  plot_panel.rs  raw_messages_panel.rs  state_transitions_panel.rs  teleop_panel.rs  tf_tree.rs  three_dee_panel.rs  topic_list.rs
crates/lichtblick-app/src/state/: app_state.rs  mod.rs  player_state.rs
crates/lichtblick-core/: Cargo.toml
crates/lichtblick-core/src/: error.rs  layout.rs  lib.rs  panel.rs  player.rs  settings.rs  time.rs  types.rs  variables.rs
crates/lichtblick-datasources/: Cargo.toml
crates/lichtblick-datasources/src/: factory.rs  foxglove_websocket.rs  lib.rs  mcap_local.rs
crates/lichtblick-mcap/: Cargo.toml
crates/lichtblick-mcap/src/: lib.rs  reader.rs  schema.rs  source.rs
crates/lichtblick-messages/: Cargo.toml
crates/lichtblick-messages/src/: evaluator.rs  lib.rs  parser.rs
crates/lichtblick-panels/: Cargo.toml
crates/lichtblick-panels/src/: catalog.rs  config.rs  data_source_info.rs  diagnostics.rs  gauge.rs  image.rs  indicator.rs  lib.rs  log_panel.rs  map.rs  parameters.rs  playback_performance.rs  plot.rs  publish.rs  raw_messages.rs  state_transitions.rs  table.rs  teleop.rs  three_dee.rs  topic_graph.rs
crates/lichtblick-players/: Cargo.toml
crates/lichtblick-players/src/: iterable_player.rs  lib.rs  traits.rs  websocket_player.rs
crates/lichtblick-theme/: Cargo.toml
crates/lichtblick-theme/src/: lib.rs
desktop/: electronBuilderConfig.rs  jest.config.rs  package.rs  tsconfig.rs  webpack.config.rs
desktop/main/: index.rs  tsconfig.rs
desktop/preload/: index.rs  tsconfig.rs
desktop/quicklook/: index.rs  tsconfig.rs
desktop/renderer/: index.rs  tsconfig.rs
docs/: AGENT_SKILLS.md  CODEBASE_REVIEW.md
e2e/: compare-settings.ts  package-lock.json  package.json  playwright.config.ts
e2e/ci-helpers/: generate-test-summary.rs  types.rs
e2e/fixtures/: change-to-epoch-format.rs  delete-file.rs  electron.rs  launch-websocket.rs  load-files.rs  load-from-file-picker.rs  urls.rs
e2e/fixtures/assets/: imported-layout.rs  tab-layout.rs
e2e/fixtures/assets/lichtblick.suite-extension-turtlesim-0.0.1/: package.rs
e2e/reports/: results.json
e2e/reports/html/: index.html
e2e/test-results/: .last-run.json
e2e/test-results/app-App-Load-canvas-renders-rust/: error-context.md
e2e/test-results/verify.3d-3D-Panel-E2E-Val-09445-s-and-verifies-3D-rendering-rust/: error-context.md  video.webm
e2e/tests/: app.spec.ts  compare.3d-panel.ts  compare.transforms.ts  verify.3d.spec.ts
e2e/tests/desktop/: playwright.config.rs
e2e/tests/desktop/extension/: custom-camera-model.desktop.spec.rs  install-extension-on-source-folder.spec.rs  open-extension-panel.desktop.spec.rs  uninstall-extension.desktop.spec.rs
e2e/tests/desktop/layout/: add-tab-to-layout.spec.rs  create-new-layout.desktop.spec.rs  import-layout.spec.rs  open-3d-panel-via-default-layout.desktop.spec.rs  open-image-panel-via-default-layout.desktop.spec.rs  open-layout.spec.rs  open-plot-panel-via-new-layout.spec.rs  (+4 more)
e2e/tests/web/: edit-timestamp.web.spec.rs  playwright.config.rs  sync-instances.web.spec.rs  web-setup.rs  web-teardown.rs
web/: index.html  package.rs  style.css  tsconfig.rs  webpack.config.rs
web/integration-test/: jest.config.rs  startup.test.rs
web/src/: entrypoint.rs  tsconfig.rs
(+21 files in other folders)
