[workspace]
resolver = "2"
members = [
    "crates/lichtblick-core",
    "crates/lichtblick-messages",
    "crates/lichtblick-mcap",
    "crates/lichtblick-players",
    "crates/lichtblick-panels",
    "crates/lichtblick-datasources",
    "crates/lichtblick-theme",
    "crates/lichtblick-app",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/lichtblick-suite/lichtblick"
authors = ["Lichtblick <lichtblick@bmwgroup.com>"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Web/WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlElement", "HtmlCanvasElement",
    "HtmlInputElement", "HtmlTextAreaElement", "HtmlSelectElement",
    "Node", "NodeList", "Event", "MouseEvent", "KeyboardEvent",
    "DragEvent", "CustomEvent", "EventTarget", "Performance", "WheelEvent",
    "WebGl2RenderingContext", "WebGlProgram", "WebGlShader",
    "WebGlBuffer", "WebGlTexture", "WebGlUniformLocation",
    "WebGlVertexArrayObject",
    "CanvasRenderingContext2d", "ImageData",
    "Url", "UrlSearchParams", "Location", "History",
    "Storage", "console", "Response", "Request", "RequestInit",
    "Headers", "AbortController", "AbortSignal",
    "Worker", "MessageEvent", "MessagePort",
    "Blob", "BlobPropertyBag", "File", "FileReader", "FileList",
    "ReadableStream", "ReadableStreamDefaultReader",
    "WebSocket", "CloseEvent",
    "MediaQueryList", "MediaQueryListEvent",
    "ResizeObserver", "ResizeObserverEntry",
    "IntersectionObserver", "IntersectionObserverEntry",
    "MutationObserver", "MutationRecord",
    "CssStyleDeclaration", "DomRect",
    "IdbFactory", "IdbDatabase", "IdbTransaction",
    "IdbObjectStore", "IdbRequest", "IdbOpenDbRequest",
    "IdbCursorWithValue", "IdbKeyRange",
    "DataTransfer", "DataTransferItemList", "DataTransferItem",
    "Navigator", "Clipboard",
] }

# UI Framework (Leptos)
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7" }
leptos_meta = { version = "0.7" }

# Data formats
mcap = "0.9"
prost = "0.13"
prost-types = "0.13"
flatbuffers = "24.3"

# Async
futures = "0.3"
tokio = { version = "1.0", features = ["sync"] }
async-channel = "2.0"
gloo-timers = "0.3"
gloo-events = "0.2"
gloo-utils = "0.2"
gloo-file = "0.3"

# Utilities
uuid = { version = "1.0", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["wasmbind"] }
thiserror = "2.0"
log = "0.4"
wasm-logger = "0.2"
once_cell = "1.0"
parking_lot = "0.12"
indexmap = { version = "2.0", features = ["serde"] }
ordered-float = { version = "4.0", features = ["serde"] }
regex = "1.0"
base64 = "0.22"
lz4_flex = "0.11"
ruzstd = "0.7"

# Internal crates
lichtblick-core = { path = "crates/lichtblick-core" }
lichtblick-messages = { path = "crates/lichtblick-messages" }
lichtblick-mcap = { path = "crates/lichtblick-mcap" }
lichtblick-players = { path = "crates/lichtblick-players" }
lichtblick-panels = { path = "crates/lichtblick-panels" }
lichtblick-datasources = { path = "crates/lichtblick-datasources" }
lichtblick-theme = { path = "crates/lichtblick-theme" }
lichtblick-app = { path = "crates/lichtblick-app" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
