[package]
name = "lichtblick-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lichtblick-core = { workspace = true }
lichtblick-messages = { workspace = true }
lichtblick-mcap = { workspace = true }
lichtblick-players = { workspace = true }
lichtblick-panels = { workspace = true }
lichtblick-datasources = { workspace = true }
lichtblick-theme = { workspace = true }

leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }

mcap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
wasm-logger = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
gloo-timers = { workspace = true }
gloo-events = { workspace = true }
gloo-utils = { workspace = true }
gloo-file = { workspace = true }
