[package]
name = "lichtblick-datasources"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lichtblick-core = { workspace = true }
lichtblick-mcap = { workspace = true }
lichtblick-players = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
gloo-file = { workspace = true }
