[package]
name = "lichtblick-mcap"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lichtblick-core = { workspace = true }
mcap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
lz4_flex = { workspace = true }
log = { workspace = true }
prost-reflect = { workspace = true }

