[package]
name = "lichtblick-messages"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lichtblick-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
