[package]
name = "lichtblick-panels"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lichtblick-core = { workspace = true }
lichtblick-messages = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
