[package]
name = "lichtblick-players"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lichtblick-core = { workspace = true }
lichtblick-mcap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
async-channel = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
gloo-timers = { workspace = true }
